# siteforge

./: README.md  index.html  pyproject.toml
.github/workflows/: gen.yml
css/: stylesheet.css
data/: asset_registry.json  build_registry.json  info.json
data/content/: info.json  projects.json
siteforge/: builder.py  gen.py  json_function_registration.py  json_functions.py  json_utils.py
src/: builder.py  gen.py  json_functions.py  json_utils.py
templates/: about.html  banner.html  base.html  contact.html  footer.html  home.html
tests/: builder_tests.py  json_functions_tests.py  json_utils_tests.py
tests/resources/asset_registry/: extra_unknown_key.json  missing_destination_key.json  missing_source_key.json  simple.json
tests/resources/build_registry/: extra_unknown_key.json  missing_output_key.json  missing_template_key.json  simple.json
tests/resources/content/func/add/: add_args.json  add_kwargs.json
tests/resources/content/func/zero/: zero.json
tests/resources/more/: data.json  data2.json
tests/resources/wrong_format/: data.xml
