[project]
name = "siteforge"
version = "0.1.0"
description = "Static site builder using json as input that binds to template site generation"
authors = [
  { name = "Jens Petter" }
]
requires-python = ">=3.9"
dependencies = [
  "jinja2"
]

[tool.setuptools]
packages = ["siteforge"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"